# course-management-system

./: .pre-commit-config.yaml  Dockerfile  README.md  bandit.yaml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  close-issues.yml
apps/abstract/: apps.py  choices.py  models.py
apps/courses/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py
apps/courses/tests/: conftest.py  test_models.py
apps/profiles/: apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/profiles/migrations/: 0001_initial.py  0002_initial.py  0002_studentprofile_meta_studentprofile_status_and_more.py
apps/profiles/tests/: conftest.py  test_models.py  test_permissions.py  test_serializers.py  test_signals.py  test_views  test_views.py
apps/user/: authentication.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_id.py
apps/user/tests/: conftest.py  test_user_serializers.py  test_user_views.py
core/: celery.py  urls.py
core/settings/: __init__.py  base.py  dev.py
templates/emails/: otp-verification.html  otp_email.html  password_reset_complete.html  password_reset_email.html
